# spice

./: .gitignore  LICENSE-MIT  README.md  env.example  pyproject.toml
spice/: __init__.py  __main__.py  _cache.py  _cli.py  _extract.py  _types.py  _urls.py  helpers.py
tests/: test_async_query.py  test_query.py
