[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dune_spice"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version", "description"]
license = {text = "MIT OR Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "polars >= 1.0",
    "requests >= 2.16",
    "aiohttp >= 3.9.5",
]

[project.urls]
Documentation = "https://github.com/paradigmxyz/spice"
Source = "https://github.com/paradigmxyz/spice"

[tool.flit.module]
name = "spice"

[project.optional-dependencies]
test = [
    "typing-extensions >=4.9.0",
]

[project.dev-dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.18.3"  # Add this line for pytest-asyncio

[tool.mypy]
python_version = "3.9"
strict = true
implicit_reexport = true
files = ["spice"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff.format]
quote-style = "single"
